--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Appdocbao"
         tools:targetApi="31">
         <activity
+            android:name=".search"
+            android:exported="false" />
+        <activity
             android:name=".test_home"
             android:exported="false" />
         <activity
